[+] Car CRUD APIs
